# ddtb-debug

./: README.md  README.rst  create_db.sh  pyproject.toml
ddtb/: manage.py
ddtb/ddtb/: asgi.py  settings.py  wsgi.py
ddtb/polls/: models.py  views.py
ddtb/polls/migrations/: 0001_initial.py
