[tool.poetry]
name = "ddtb-debug"
version = "0.1.0"
description = ""
authors = ["Eric Lapouyade <eric.lapouyade@jiliti-group.com>"]
readme = "README.md"
packages = [{include = "ddtb_debug"}]

[tool.poetry.dependencies]
python = "^3.11"
django-debug-toolbar = "^4.1.0"
psycopg-binary = "^3.1.9"
psycopg = "^3.1.9"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
